<resources>
    <string name="app_name">TicTacToe</string>
    <string name="title">TicTacToe</string>
    <string name="start">BEGIN</string>
    <string name="name_1st_player">ENTER NAME 1ST PLAYER</string>
    <string name="player_one">1 PLAYER</string>
    <string name="player_two">2 PLAYERS</string>
    <string name="name_2nd_player">ENTER NAME 2ND PLAYER</string>
    <string name="check_mode">CHECK MODE</string>
    <string name="exit">Exit</string>
    <string name="player_1_name">Player 1</string>
    <string name="player_2_name">Player 2</string>
    <string name="score">SCORE</string>
    <string name="x">X</string>
    <string name="o">O</string>
    <string name="turn">TURN</string>
    <string name="game_start">GAME START</string>
    <string name="reset_stats">RESET STATS</string>
</resources>