<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:fitsSystemWindows="true"
        app:subtitleTextColor="@color/white"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/yellowWhite"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainToolbar" />

    <ImageView
        android:id="@+id/titleImageIV"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTV" />

    <LinearLayout
        android:id="@+id/checkModeLL"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleImageIV">

        <TextView
            android:id="@+id/checkModeTV"
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/check_mode"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ToggleButton
            android:id="@+id/modeToggleBTN"
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/black"
            android:textColor="@color/white"
            android:textOff="@string/player_two"
            android:textOn="@string/player_one"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iconPersonIV"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:src="@drawable/two_person" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkModeLL">


        <EditText
            android:id="@+id/name1stET"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:background="@color/yellowWhite"
            android:gravity="center"
            android:hint="@string/name_1st_player"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name2ndET"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/yellowWhite"
            android:gravity="center"
            android:hint="@string/name_2nd_player"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/startBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/black"
            android:text="@string/start"
            android:textColor="@color/yellowWhite"
            android:textSize="20sp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>